--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,6 +1,6 @@
 // Fonts
 @import url('https://fonts.googleapis.com/css?family=Nunito');
-
+@import '~intl-tel-input/build/css/intlTelInput.css';
 // Variables
 // @import 'variables';
 
